Format all docs notebooks with black (#195)
* Format all docs notebooks with black

* Polish some comments

* Split import cell so that warnings and loggers are separated

* comment on seperate line

--- a/docs/examples/MarrmotM01.ipynb
+++ b/docs/examples/MarrmotM01.ipynb
@@ -21,12 +21,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2a72501c-8a4a-4570-b9bc-39c52dd7e039",
+   "id": "de23e838-d779-4dad-a2e8-8707ef64f17d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ec98d58f-b46f-48c3-a834-7232e4694747",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "\n",
     "import ewatercycle.forcing\n",
@@ -70,13 +80,13 @@
     }
    ],
    "source": [
-    "forcing = ewatercycle.forcing.load_foreign('marrmot',\n",
-    "                        directory='.',\n",
-    "                        start_time='1989-01-01T00:00:00Z',\n",
-    "                        end_time='1992-12-31T00:00:00Z',\n",
-    "                        forcing_info={\n",
-    "                            'forcing_file': 'BMI_testcase_m01_BuffaloRiver_TN_USA.mat'\n",
-    "                        })\n",
+    "forcing = ewatercycle.forcing.load_foreign(\n",
+    "    \"marrmot\",\n",
+    "    directory=\".\",\n",
+    "    start_time=\"1989-01-01T00:00:00Z\",\n",
+    "    end_time=\"1992-12-31T00:00:00Z\",\n",
+    "    forcing_info={\"forcing_file\": \"BMI_testcase_m01_BuffaloRiver_TN_USA.mat\"},\n",
+    ")\n",
     "print(forcing)"
    ]
   },
@@ -144,7 +154,7 @@
     }
    ],
    "source": [
-    "model = ewatercycle.models.MarrmotM01(version='2020.11', forcing=forcing)\n",
+    "model = ewatercycle.models.MarrmotM01(version=\"2020.11\", forcing=forcing)\n",
     "print(model)"
    ]
   },
@@ -200,7 +210,7 @@
    "source": [
     "cfg_file, cfg_dir = model.setup(\n",
     "    maximum_soil_moisture_storage=12.0,\n",
-    "    end_time = \"1989-02-01T00:00:00Z\",\n",
+    "    end_time=\"1989-02-01T00:00:00Z\",\n",
     ")\n",
     "print(cfg_file)\n",
     "print(cfg_dir)"
@@ -345,9 +355,9 @@
     "time_range = []\n",
     "end_time = model.end_time\n",
     "\n",
-    "while (model.time < end_time):\n",
+    "while model.time < end_time:\n",
     "    model.update()\n",
-    "    discharge.append(model.get_value('flux_out_Q')[0])\n",
+    "    discharge.append(model.get_value(\"flux_out_Q\")[0])\n",
     "    time_range.append(model.time_as_datetime.date())\n",
     "    print(model.time_as_isostr)"
    ]
@@ -378,7 +388,7 @@
    "outputs": [],
    "source": [
     "simulated_discharge = pd.DataFrame(\n",
-    "    {'simulation': discharge}, index=pd.to_datetime(time_range)\n",
+    "    {\"simulation\": discharge}, index=pd.to_datetime(time_range)\n",
     ")"
    ]
   },
