--- a/docs/examples/Irrigation.ipynb
+++ b/docs/examples/Irrigation.ipynb
@@ -21,6 +21,7 @@
    "source": [
     "# This cell is only used to suppress some distracting output messages\n",
     "import warnings\n",
+    "\n",
     "warnings.filterwarnings(\"ignore\", category=UserWarning)"
    ]
   },
@@ -31,13 +32,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ewatercycle.models\n",
-    "import ewatercycle.parameter_sets\n",
-    "\n",
-    "# These packages are not strictly necessary. We'll use them to provide some insight into the steps that we're taking.\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "from cartopy import crs, feature as cfeature"
+    "from cartopy import crs\n",
+    "from cartopy import feature as cfeature\n",
+    "\n",
+    "import ewatercycle.models\n",
+    "import ewatercycle.parameter_sets"
    ]
   },
   {
@@ -86,7 +87,7 @@
     "    config=\"./pcrglobwb_merrimack.ini\",\n",
     "    target_model=\"pcrglobwb\",\n",
     "    doi=\"10.5281/zenodo.1045339\",\n",
-    "    supported_model_versions={'setters'}\n",
+    "    supported_model_versions={\"setters\"},\n",
     ")\n",
     "\n",
     "print(merrimack_parameterset)"
@@ -129,10 +130,23 @@
    "outputs": [],
    "source": [
     "# Instantiate the model instance\n",
-    "reference = ewatercycle.models.PCRGlobWB(version='setters', parameter_set=merrimack_parameterset)\n",
+    "reference = ewatercycle.models.PCRGlobWB(\n",
+    "    version=\"setters\", parameter_set=merrimack_parameterset\n",
+    ")\n",
     "\n",
-    "# Create experiment folder, set up the model configuration, and start the container in which the model will run\n",
+    "# Create experiment folder, set up the model configuration,\n",
+    "# and start the container in which the model will run\n",
     "reference_config, reference_dir = reference.setup()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4568ff3a-705e-46fb-bca0-8ace3a7308e3",
+   "metadata": {},
+   "source": [
+    "Initialize the model inside the container.\n",
+    "Depending on your system this may take a few minutes, \n",
+    "log messages will start to appear in the output directory\n"
    ]
   },
   {
@@ -142,8 +156,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize the model inside the container\n",
-    "# Depending on your system this may take a few minutes, log messages will start to appear in the output directory\n",
     "reference.initialize(reference_config)"
    ]
   },
@@ -238,7 +250,9 @@
    ],
    "source": [
     "time = pd.date_range(reference.start_time_as_isostr, reference.end_time_as_isostr)\n",
-    "timeseries = pd.DataFrame(index=pd.Index(time, name='time'), columns=['reference', 'experiment'])\n",
+    "timeseries = pd.DataFrame(\n",
+    "    index=pd.Index(time, name=\"time\"), columns=[\"reference\", \"experiment\"]\n",
+    ")\n",
     "timeseries.head()"
    ]
   },
@@ -258,14 +272,16 @@
    ],
    "source": [
     "while reference.time < reference.end_time:\n",
-    "    \n",
-    "    reference.update() \n",
-    "    \n",
+    "\n",
+    "    reference.update()\n",
+    "\n",
     "    # Track discharge at station location\n",
-    "    discharge_at_station = reference.get_value_at_coords('discharge', lat=[grdc_latitude], lon=[grdc_longitude])\n",
+    "    discharge_at_station = reference.get_value_at_coords(\n",
+    "        \"discharge\", lat=[grdc_latitude], lon=[grdc_longitude]\n",
+    "    )\n",
     "    time = reference.time_as_isostr\n",
-    "    timeseries['reference'][time] = discharge_at_station[0]\n",
-    "    \n",
+    "    timeseries[\"reference\"][time] = discharge_at_station[0]\n",
+    "\n",
     "    # Show progress\n",
     "    print(time, end=\"\\r\")  # \"\\r\" clears the output before printing the next timestamp"
    ]
@@ -408,14 +424,14 @@
     "ax = fig.add_subplot(111, projection=crs.PlateCarree())\n",
     "\n",
     "# Plotting the model field is a one-liner\n",
-    "reference.get_value_as_xarray(\"discharge\").plot(ax=ax, cmap='GnBu')\n",
+    "reference.get_value_as_xarray(\"discharge\").plot(ax=ax, cmap=\"GnBu\")\n",
     "\n",
     "# Also plot the station location\n",
-    "ax.scatter(grdc_longitude, grdc_latitude, s=25, c='r')\n",
+    "ax.scatter(grdc_longitude, grdc_latitude, s=25, c=\"r\")\n",
     "\n",
     "# Overlay ocean and coastines\n",
     "ax.add_feature(cfeature.OCEAN, zorder=2)\n",
-    "ax.add_feature(cfeature.RIVERS, zorder=2, color='k')\n",
+    "ax.add_feature(cfeature.RIVERS, zorder=2, color=\"k\")\n",
     "ax.coastlines(zorder=3)"
    ]
   },
@@ -487,7 +503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "soil_moisture = reference.get_value_as_xarray('upper_soil_saturation_degree')\n",
+    "soil_moisture = reference.get_value_as_xarray(\"upper_soil_saturation_degree\")\n",
     "\n",
     "# Copy the field and manually overwrite a random part of the domain\n",
     "irrigated_soil_moisture = soil_moisture.copy()\n",
@@ -526,8 +542,8 @@
     "left_axes = fig.add_subplot(121, projection=crs.PlateCarree())\n",
     "right_axes = fig.add_subplot(122, projection=crs.PlateCarree())\n",
     "\n",
-    "soil_moisture.plot(ax=left_axes, cmap='GnBu', vmin=0.3, vmax=1)\n",
-    "irrigated_soil_moisture.plot(ax=right_axes, cmap='GnBu', vmin=0.3, vmax=1)\n",
+    "soil_moisture.plot(ax=left_axes, cmap=\"GnBu\", vmin=0.3, vmax=1)\n",
+    "irrigated_soil_moisture.plot(ax=right_axes, cmap=\"GnBu\", vmin=0.3, vmax=1)\n",
     "\n",
     "# Decoration\n",
     "left_axes.set_title(\"Reference\")\n",
@@ -535,7 +551,7 @@
     "\n",
     "for axes in [left_axes, right_axes]:\n",
     "    axes.add_feature(cfeature.OCEAN, zorder=2)\n",
-    "    axes.add_feature(cfeature.RIVERS, zorder=2, color='k')\n",
+    "    axes.add_feature(cfeature.RIVERS, zorder=2, color=\"k\")\n",
     "    axes.coastlines(zorder=3)"
    ]
   },
@@ -554,7 +570,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment = ewatercycle.models.PCRGlobWB(version='setters', parameter_set=merrimack_parameterset)\n",
+    "experiment = ewatercycle.models.PCRGlobWB(\n",
+    "    version=\"setters\", parameter_set=merrimack_parameterset\n",
+    ")\n",
     "experiment_config, experiment_dir = experiment.setup()"
    ]
   },
@@ -565,7 +583,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment.initialize(experiment_config)  # this may take a few minutes, log messages will start to appear in the output directory."
+    "experiment.initialize(experiment_config)\n",
+    "# this may take a few minutes, log messages will start to appear in the output directory."
    ]
   },
   {
@@ -585,18 +604,22 @@
    "source": [
     "while experiment.time < experiment.end_time:\n",
     "\n",
-    "    experiment.update() \n",
+    "    experiment.update()\n",
     "\n",
     "    # Overwrite soil moisture field\n",
-    "    soil_moisture = experiment.get_value_as_xarray('upper_soil_saturation_degree', )\n",
+    "    soil_moisture = experiment.get_value_as_xarray(\n",
+    "        \"upper_soil_saturation_degree\",\n",
+    "    )\n",
     "    soil_moisture[31:41, 18:28] = 1\n",
-    "    experiment.set_value('upper_soil_saturation_degree', soil_moisture.values.flatten())   \n",
-    "    \n",
+    "    experiment.set_value(\"upper_soil_saturation_degree\", soil_moisture.values.flatten())\n",
+    "\n",
     "    # Track discharge at station location\n",
-    "    discharge_at_station = experiment.get_value_at_coords('discharge', lat=[grdc_latitude], lon=[grdc_longitude])\n",
+    "    discharge_at_station = experiment.get_value_at_coords(\n",
+    "        \"discharge\", lat=[grdc_latitude], lon=[grdc_longitude]\n",
+    "    )\n",
     "    time = experiment.time_as_isostr\n",
-    "    timeseries['experiment'][time] = discharge_at_station[0]\n",
-    "    \n",
+    "    timeseries[\"experiment\"][time] = discharge_at_station[0]\n",
+    "\n",
     "    # Show progress\n",
     "    print(time, end=\"\\r\")  # \"\\r\" clears the output before printing the next timestamp"
    ]
@@ -641,7 +664,7 @@
    "source": [
     "fig, ax = plt.subplots(dpi=120)\n",
     "timeseries.plot(ax=ax)\n",
-    "ax.set_title('Increased discharge due to irrigation')"
+    "ax.set_title(\"Increased discharge due to irrigation\")"
    ]
   },
   {
@@ -682,7 +705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
