--- a/docs/examples/MarrmotM14.ipynb
+++ b/docs/examples/MarrmotM14.ipynb
@@ -21,12 +21,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2a07ee36-bf51-46ab-bc5b-bffd6255d3ec",
+   "id": "eb98161f-337b-4db9-a174-74b47454da08",
    "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "74e31edd-2caa-4c1c-bd93-779b2a353c2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "\n",
     "import ewatercycle.forcing\n",
@@ -70,13 +80,13 @@
     }
    ],
    "source": [
-    "forcing = ewatercycle.forcing.load_foreign('marrmot',\n",
-    "                        directory='.',\n",
-    "                        start_time='1989-01-01T00:00:00Z',\n",
-    "                        end_time='1992-12-31T00:00:00Z',\n",
-    "                        forcing_info={\n",
-    "                            'forcing_file': 'BMI_testcase_m01_BuffaloRiver_TN_USA.mat'\n",
-    "                        })\n",
+    "forcing = ewatercycle.forcing.load_foreign(\n",
+    "    \"marrmot\",\n",
+    "    directory=\".\",\n",
+    "    start_time=\"1989-01-01T00:00:00Z\",\n",
+    "    end_time=\"1992-12-31T00:00:00Z\",\n",
+    "    forcing_info={\"forcing_file\": \"BMI_testcase_m01_BuffaloRiver_TN_USA.mat\"},\n",
+    ")\n",
     "print(forcing)"
    ]
   },
@@ -146,7 +156,7 @@
     }
    ],
    "source": [
-    "model = ewatercycle.models.MarrmotM14(version='2020.11', forcing=forcing)\n",
+    "model = ewatercycle.models.MarrmotM14(version=\"2020.11\", forcing=forcing)\n",
     "print(model)"
    ]
   },
@@ -209,7 +219,7 @@
    "source": [
     "cfg_file, cfg_dir = model.setup(\n",
     "    maximum_soil_moisture_storage=12.0,\n",
-    "    end_time = \"1989-02-01T00:00:00Z\",\n",
+    "    end_time=\"1989-02-01T00:00:00Z\",\n",
     ")\n",
     "print(cfg_file)\n",
     "print(cfg_dir)"
@@ -361,9 +371,9 @@
     "time_range = []\n",
     "end_time = model.end_time\n",
     "\n",
-    "while (model.time < end_time):\n",
+    "while model.time < end_time:\n",
     "    model.update()\n",
-    "    discharge.append(model.get_value('flux_out_Q')[0])\n",
+    "    discharge.append(model.get_value(\"flux_out_Q\")[0])\n",
     "    time_range.append(model.time_as_datetime.date())\n",
     "    print(model.time_as_isostr)"
    ]
@@ -396,7 +406,7 @@
    "outputs": [],
    "source": [
     "simulated_discharge = pd.DataFrame(\n",
-    "    {'simulation': discharge}, index=pd.to_datetime(time_range)\n",
+    "    {\"simulation\": discharge}, index=pd.to_datetime(time_range)\n",
     ")"
    ]
   },
