Files changes by `pre-commit run --all-files` command

--- a/docs/user_guide.ipynb
+++ b/docs/user_guide.ipynb
@@ -809,7 +809,7 @@
     "    station_id=grdc_station_id,\n",
     "    start_time=\"1990-01-01T00:00:00Z\",  # or: model_instance.start_time_as_isostr\n",
     "    end_time=\"1990-12-15T00:00:00Z\",\n",
-    "    column=\"GRDC\"\n",
+    "    column=\"GRDC\",\n",
     ")\n",
     "\n",
     "observations.head()"
