Dont mention cartesius in lisflood nb

--- a/docs/examples/lisflood.ipynb
+++ b/docs/examples/lisflood.ipynb
@@ -13,7 +13,7 @@
    "id": "dd265189-37f4-4256-9740-0bac2b1eacee",
    "metadata": {},
    "source": [
-    "# Running LISFLOOD model using eWaterCycle package (on Cartesius machine of SURFsara)\n",
+    "# Running LISFLOOD model using eWaterCycle package (on SURF Research Cloud)\n",
     "\n",
     "This notebooks shows how to run [LISFLOOD](https://ec-jrc.github.io/lisflood-model/) model. Please note that the [lisflood-grpc4bmi docker image](https://hub.docker.com/r/ewatercycle/lisflood-grpc4bmi) in eWaterCycle is compatible only with forcing data and parameter set on [eWaterCycle infrastructure](https://github.com/eWaterCycle/infra) like a server on the SURF Research Cloud. More information about data, configuration and installation instructions can be found in the [System setup](https://ewatercycle.readthedocs.io/en/latest/system_setup.html) in the eWaterCycle documentation."
    ]
