In docs replace cartesius with snellius

--- a/docs/examples/lisflood.ipynb
+++ b/docs/examples/lisflood.ipynb
@@ -119,7 +119,7 @@
     "tags": []
    },
    "source": [
-    "This example uses parameter set on Cartesius machine of SURFsara."
+    "This example uses parameter set from SURF dCache storage."
    ]
   },
   {
