--- a/docs/examples/generate_forcing.ipynb
+++ b/docs/examples/generate_forcing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,11 +515,76 @@
     "    var = list(dataset.data_vars.keys())[0]\n",
     "    dataset[var].isel(time=1).plot(cmap=\"coolwarm\", robust=True, size=5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ewatercycle.parameter_sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter set\n",
+      "-------------\n",
+      "name=lisflood_global-masked_01degree_ERA5\n",
+      "directory=/gpfs/work1/0/wtrcycle/parameter-sets/lisflood_global-masked_01degree\n",
+      "config=/gpfs/work1/0/wtrcycle/parameter-sets/lisflood_global-masked_01degree/settings_lisflood_ERA5.xml\n",
+      "doi=N/A\n",
+      "target_model=lisflood\n",
+      "supported_model_versions={'20.10'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "parameter_set = ewatercycle.parameter_sets.get_parameter_set(f'lisflood_global-masked_01degree_ERA5')\n",
+    "print(parameter_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lisflood_forcing = ewatercycle.forcing.generate(\n",
+    "    target_model=\"lisflood\",\n",
+    "    dataset=\"ERA5\",\n",
+    "    start_time=\"1990-01-01T00:00:00Z\",\n",
+    "    end_time=\"1990-12-31T00:00:00Z\",\n",
+    "    shape=\"./data/Lisvap/Doring_convex.shp\",\n",
+    "    model_specific_options=dict(\n",
+    "        run_lisvap=True,\n",
+    "        lisvap_config=f\"{parameter_set.directory}/settings_lisvap.xml\",\n",
+    "        mask_map=\"./data/Lisvap/model_mask_doring.nc\",\n",
+    "        version='20.10',\n",
+    "        parameterset_dir=parameter_set.directory\n",
+    "    ),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(lisflood_forcing)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -533,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
