add documentation for lisvap forcing generation

--- a/docs/examples/generate_forcing.ipynb
+++ b/docs/examples/generate_forcing.ipynb
@@ -397,7 +397,7 @@
     "\n",
     "### Generate forcing\n",
     "\n",
-    "Forcing for LISFLOOD is created using the ESMValTool recipe. It produces one file per each variable: temperature, precipitation, maximum temperature, minimum temperature, u component of wind, v component of wind, surface solar radiation downwards, and dewpoint temperature. Running LISVAP is not implemented yet. Therefore, LISFLOOD forcing data 'e0', 'es0' and 'et0' are not generated.\n",
+    "Forcing for LISFLOOD is created using the ESMValTool recipe. It produces one file per each variable: temperature, precipitation, maximum temperature, minimum temperature, u component of wind, v component of wind, surface solar radiation downwards, and dewpoint temperature. Running LISVAP is shown below. For now, LISFLOOD forcing data 'e0', 'es0' and 'et0' are not generated.\n",
     "However, the recipe creates LISVAP input data that can be found in `lisflood_forcing.directory`.\n",
     "You can set the start and end date, and the region. See [eWaterCycle documentation](https://ewatercycle.readthedocs.io/en/latest/apidocs/ewatercycle.forcing.html#submodules) for more information. "
    ]
@@ -517,53 +517,87 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:ewatercycle.forcing._lisflood:Parameter `run_lisvap` is set to False. No forcing data will be generated for 'e0', 'es0' and 'et0'. However, the recipe creates LISVAP input data that can be found in /scratch-shared/ewatercycle/recipe_lisflood_20220217_161249/work/diagnostic_daily/script.\n"
-     ]
-    }
-   ],
    "source": [
-    "lisflood_forcing = ewatercycle.forcing.generate(\n",
-    "    target_model=\"lisflood\",\n",
-    "    dataset=\"ERA5\",\n",
-    "    start_time=\"1990-01-01T00:00:00Z\",\n",
-    "    end_time=\"1990-12-31T00:00:00Z\",\n",
-    "    shape=\"./data/Lisvap/Doring_convex.shp\",\n",
-    ")"
+    "### Generate forcing using LISVAP\n",
+    "\n",
+    "Forcing for LISFLOOD is created using the ESMValTool recipe and LISVAP model.\n",
+    "ESMValTool recipe produces one file per variable cropped for the catchment:\n",
+    "temperature, precipitation, maximum temperature, minimum temperature, u\n",
+    "component of wind, v component of wind, surface solar radiation downwards, and\n",
+    "dewpoint temperature. Some of these are LISVAP input data. Then, LISVAP\n",
+    "generates forcing data 'e0', 'es0' and 'et0', again one file per variable but\n",
+    "with global extents. It also generates global datasets from other forcing files\n",
+    "and store them in the forcing directory, see the example below.  \n",
+    "\n",
+    "Running LISVAP needs some model parameters. Currently, ewatercycle supports only\n",
+    "a global parameter-set with a resolution of 01 degrees masked by six catchments\n",
+    "(the convex hull shapes). The available version of both LISVAP and LISFLOOD only\n",
+    "works with this parameter-set. Therefore, we need to prepare some\n",
+    "LISVAP-specific data and pass them to `ewatercycle.forcing.generate` function.\n",
+    "\n",
+    "**Input arguments of LISVAP:**\n",
+    "\n",
+    "- lisvap_config: This is a configuration file in `xml` format e.g.\n",
+    "  `settings_lisvap.xml`. A template file is avialbel in\n",
+    "  [era5-comparison/lisflood/utils/settings_templates](https://github.com/eWaterCycle/era5-comparison/blob/master/lisflood/utils/settings_templates/settings_lisvap.xml)\n",
+    "  and also under its parameter-set directory.\n",
+    "- mask_map: a mask for the catchment. This file should have a global extent that\n",
+    "  matches our global parameter-set. We explain below how to get this file.\n",
+    "- version: LISVAP/LISFLOOD model version supported by ewatercycle.\n",
+    "- parameterset_dir: the directory of the global parameter-set that can be\n",
+    "  obtained by `ewatercycle.parameter_sets.get_parameter_set`.\n",
+    "\n",
+    "**Generate convex hull shapefile and mask map:**\n",
+    "\n",
+    "For our example below, we want to generate a shapefile and a model mask for\n",
+    "Doring catchment. The shapefile is passed to ESMValTool recipe whereas the model\n",
+    "mask to LISVAP. An auxiliary LISFLOOD file called `catchment_masks.nc` is\n",
+    "available in\n",
+    "[eWaterCycle/recipes_auxiliary_datasets](https://github.com/eWaterCycle/recipes_auxiliary_datasets/blob/master/LISFLOOD/catchment_masks.nc). \n",
+    "\n",
+    "Here we provided a sample code to compute the convex hull of Doring and save it\n",
+    "as a shape file. Note that you need to install the package `geopandas`:\n",
+    "\n",
+    "```python\n",
+    "import xarray as xr\n",
+    "from geopandas import GeoSeries\n",
+    "\n",
+    "masks = xr.open_dataarray(\"./data/Lisvap/catchment_masks.nc\").load()\n",
+    "buffer = 0.05  # degrees lat/lon\n",
+    "# Compute convex hull\n",
+    "lat, lon = [\n",
+    "    masks[v].values[np.where(masks.loc[\"Doring\"].values)[i]]\n",
+    "    for v, i in zip([\"lat\", \"lon\"], [0, 1])\n",
+    "]\n",
+    "hull = GeoSeries(\n",
+    "    [shply.geometry.Point(x, y) for x, y in zip(lon, lat)]\n",
+    ").unary_union.convex_hull.buffer(buffer)\n",
+    "# Save it to shapefile\n",
+    "GeoSeries(hull, crs=\"EPSG:4326\").to_file(\"./data/Lisvap/Doring_convex.shp\")\n",
+    "```\n",
+    "\n",
+    "And here we provided a sample code to produce model mask of Doring and save it\n",
+    "as a Netcdf file:\n",
+    "\n",
+    "```python\n",
+    "import xarray as xr\n",
+    "masks = xr.open_dataarray(\"./data/Lisvap/catchment_masks.nc\").load()\n",
+    "doring = masks.sel(basin=\"Doring\")\n",
+    "doring.to_netcdf(\"./data/Lisvap/model_mask_doring.nc\")\n",
+    "```\n",
+    "\n",
+    "More information is provided by era5-comparison study.\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "eWaterCycle forcing\n",
-      "-------------------\n",
-      "start_time=1990-01-01T00:00:00Z\n",
-      "end_time=1990-12-31T00:00:00Z\n",
-      "directory=/gpfs/scratch1/shared/ewatercycle/recipe_lisflood_20220217_161249/work/diagnostic_daily/script\n",
-      "shape=/gpfs/home2/fakhereh/GitHub/ewatercycle/docs/examples/data/Lisvap/Doring_convex.shp\n",
-      "PrefixPrecipitation=lisflood_ERA5_Doring_convex_pr_1990_1990.nc\n",
-      "PrefixTavg=lisflood_ERA5_Doring_convex_tas_1990_1990.nc\n",
-      "PrefixE0=e0.nc\n",
-      "PrefixES0=es0.nc\n",
-      "PrefixET0=et0.nc\n"
-     ]
-    }
-   ],
    "source": [
-    "print(lisflood_forcing)"
+    "First, we get the global parameter-set of LISFLOOD for ERA5 as an example.\n",
+    "`parameter_set` provides useful information like `directory` and\n",
+    "`supported_model_versions`:"
    ]
   },
   {
@@ -598,6 +632,14 @@
    "source": [
     "parameter_set = ewatercycle.parameter_sets.get_parameter_set(f'lisflood_global-masked_01degree_ERA5')\n",
     "print(parameter_set)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Second, we use `ewatercycle.forcing.generate` together with model specific\n",
+    "options for LISVAP:"
    ]
   },
   {
@@ -680,7 +722,7 @@
     "            lisvap_config=f\"{parameter_set.directory}/settings_lisvap.xml\",\n",
     "            mask_map=\"./data/Lisvap/model_mask_doring.nc\",\n",
     "            version='20.10',\n",
-    "            parameterset_dir=parameter_set.directory\n",
+    "            parameterset_dir=parameter_set.directory,\n",
     "        ),\n",
     "    ),\n",
     ")"
@@ -711,6 +753,13 @@
    ],
    "source": [
     "print(lisflood_forcing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot forcing"
    ]
   },
   {
@@ -819,6 +868,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.2"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "a8aa8210cb3d81d2b5c08b30572e78ad19bd30da92b4caf9890388bc07c5e3bf"
+   }
   }
  },
  "nbformat": 4,
