make sonalcloud happy

--- a/docs/examples/generate_forcing.ipynb
+++ b/docs/examples/generate_forcing.ipynb
@@ -630,7 +630,9 @@
     }
    ],
    "source": [
-    "parameter_set = ewatercycle.parameter_sets.get_parameter_set(f'lisflood_global-masked_01degree_ERA5')\n",
+    "parameter_set = ewatercycle.parameter_sets.get_parameter_set(\n",
+    "    f'lisflood_global-masked_01degree_ERA5'\n",
+    ")\n",
     "print(parameter_set)"
    ]
   },
@@ -721,7 +723,7 @@
     "        run_lisvap=dict(\n",
     "            lisvap_config=f\"{parameter_set.directory}/settings_lisvap.xml\",\n",
     "            mask_map=\"./data/Lisvap/model_mask_doring.nc\",\n",
-    "            version='20.10',\n",
+    "            version=\"20.10\",\n",
     "            parameterset_dir=parameter_set.directory,\n",
     "        ),\n",
     "    ),\n",
@@ -835,12 +837,14 @@
     "    lisflood_forcing.PrefixE0,\n",
     "    lisflood_forcing.PrefixES0,\n",
     "    lisflood_forcing.PrefixET0,\n",
-    "    ]\n",
+    "]\n",
     "# Loading global dataset takes a few minutes\n",
     "for file_name in forcing_files:\n",
     "    dataset = xr.load_dataset(f\"{lisflood_forcing.directory}/{file_name}\")\n",
     "    var = list(dataset.data_vars.keys())[0]\n",
-    "    dataset[var].isel(time=1).sel(lon=slice(18,22), lat=slice(-31,-34)).plot(cmap=\"coolwarm\", robust=True, size=5)"
+    "    dataset[var].isel(time=1).sel(lon=slice(18,22), lat=slice(-31,-34)).plot(\n",
+    "        cmap=\"coolwarm\", robust=True, size=5\n",
+    "    )"
    ]
   },
   {
