another try to make sonarcloud happy

--- a/docs/examples/generate_forcing.ipynb
+++ b/docs/examples/generate_forcing.ipynb
@@ -631,7 +631,7 @@
    ],
    "source": [
     "parameter_set = ewatercycle.parameter_sets.get_parameter_set(\n",
-    "    f'lisflood_global-masked_01degree_ERA5'\n",
+    "    \"lisflood_global-masked_01degree_ERA5\"\n",
     ")\n",
     "print(parameter_set)"
    ]
@@ -842,7 +842,7 @@
     "for file_name in forcing_files:\n",
     "    dataset = xr.load_dataset(f\"{lisflood_forcing.directory}/{file_name}\")\n",
     "    var = list(dataset.data_vars.keys())[0]\n",
-    "    dataset[var].isel(time=1).sel(lon=slice(18,22), lat=slice(-31,-34)).plot(\n",
+    "    dataset[var].isel(time=1).sel(lon=slice(18, 22), lat=slice(-31, -34)).plot(\n",
     "        cmap=\"coolwarm\", robust=True, size=5\n",
     "    )"
    ]
