Drop Python 3.7 support so we can use shutil.copytree(dirs_exist_ok=True)

--- a/docs/examples/hype.ipynb
+++ b/docs/examples/hype.ipynb
@@ -25,7 +25,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/verhoes/miniconda39/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/_warnings.py:13: UserWarning: \n",
+      "/home/stefanv/mamba/envs/ewatercycle/lib/python3.10/site-packages/esmvalcore/experimental/_warnings.py:13: UserWarning: \n",
       "  Thank you for trying out the new ESMValCore API.\n",
       "  Note that this API is experimental and may be subject to change.\n",
       "  More info: https://github.com/ESMValGroup/ESMValCore/issues/498\n"
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "parameter_set_dir = \"<path where demo.zip was extracted to>\"\n",
-    "parameter_set_dir = \"/tmp/o/demo\"\n",
+    "parameter_set_dir = \"/home/stefanv/git/eWaterCycle/ewatercycle/docs/examples/hype-run/demo\"\n",
     "parameter_set = ewatercycle.parameter_sets.ParameterSet(\n",
     "    name=\"hype_demo\",\n",
     "    directory=parameter_set_dir,\n",
@@ -142,15 +142,19 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "('/home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/output/hype_20220531_134241/info.txt',\n",
-       " '/home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/output/hype_20220531_134241')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SingularityVersionException",
+     "evalue": "Wrong version (1.0.2) of singularity found, require version 3.6.0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mSingularityVersionException\u001b[0m               Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m cfg_file, cfg_dir \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msetup\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m cfg_file, cfg_dir\n",
+      "File \u001b[0;32m~/git/eWaterCycle/ewatercycle/src/ewatercycle/models/hype.py:152\u001b[0m, in \u001b[0;36mHype.setup\u001b[0;34m(self, start_time, end_time, crit_time, cfg_dir)\u001b[0m\n\u001b[1;32m    150\u001b[0m \u001b[38;5;66;03m# start container\u001b[39;00m\n\u001b[1;32m    151\u001b[0m work_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(cfg_dir_as_path)\n\u001b[0;32m--> 152\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbmi \u001b[38;5;241m=\u001b[39m \u001b[43m_start_container\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mversion\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwork_dir\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(cfg_file), work_dir\n",
+      "File \u001b[0;32m~/git/eWaterCycle/ewatercycle/src/ewatercycle/models/hype.py:211\u001b[0m, in \u001b[0;36m_start_container\u001b[0;34m(version, work_dir)\u001b[0m\n\u001b[1;32m    209\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m CFG[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontainer_engine\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mlower() \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msingularity\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m    210\u001b[0m     image \u001b[38;5;241m=\u001b[39m CFG[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msingularity_dir\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m/\u001b[39m _version_images[version][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msingularity\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m--> 211\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mBmiClientSingularity\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    212\u001b[0m \u001b[43m        \u001b[49m\u001b[43mimage\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mimage\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    213\u001b[0m \u001b[43m        \u001b[49m\u001b[43mwork_dir\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mwork_dir\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    214\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    215\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m CFG[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontainer_engine\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mlower() \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdocker\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m    216\u001b[0m     image \u001b[38;5;241m=\u001b[39m _version_images[version][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdocker\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "File \u001b[0;32m~/mamba/envs/ewatercycle/lib/python3.10/site-packages/grpc4bmi/bmi_client_singularity.py:198\u001b[0m, in \u001b[0;36mBmiClientSingularity.__init__\u001b[0;34m(self, image, work_dir, input_dirs, delay, timeout, capture_logs)\u001b[0m\n\u001b[1;32m    195\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtype of argument \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minput_dirs\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m must be collections.abc.Iterable; \u001b[39m\u001b[38;5;124m'\u001b[39m \\\n\u001b[1;32m    196\u001b[0m           \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgot \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mqualified_name(input_dirs)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m instead\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    197\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(msg)\n\u001b[0;32m--> 198\u001b[0m \u001b[43mcheck_singularity_version\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    199\u001b[0m host \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlocalhost\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    200\u001b[0m port \u001b[38;5;241m=\u001b[39m BmiClient\u001b[38;5;241m.\u001b[39mget_unique_port(host)\n",
+      "File \u001b[0;32m~/mamba/envs/ewatercycle/lib/python3.10/site-packages/grpc4bmi/bmi_client_singularity.py:25\u001b[0m, in \u001b[0;36mcheck_singularity_version\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m local_version \u001b[38;5;241m=\u001b[39m semver\u001b[38;5;241m.\u001b[39mVersionInfo\u001b[38;5;241m.\u001b[39mparse(stdout\u001b[38;5;241m.\u001b[39mdecode(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m local_version \u001b[38;5;241m<\u001b[39m REQUIRED_SINGULARITY_VERSION:\n\u001b[0;32m---> 25\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m SingularityVersionException(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWrong version (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlocal_version\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) of singularity found, \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     26\u001b[0m                                       \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrequire version \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mREQUIRED_SINGULARITY_VERSION\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "\u001b[0;31mSingularityVersionException\u001b[0m: Wrong version (1.0.2) of singularity found, require version 3.6.0"
+     ]
     }
    ],
    "source": [
@@ -345,7 +349,7 @@
    "hash": "01ca17e9ced11a2af392a5b687ce703e247d5832196a25892ccc3acd549c16f5"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.5",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -359,10 +363,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.4"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
