--- a/docs/examples/generate_forcing.ipynb
+++ b/docs/examples/generate_forcing.ipynb
@@ -856,9 +856,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:esmvalcore._recipe:Missing data for fx variable 'areacella' of dataset ERA5\n",
+      "WARNING:esmvalcore._recipe:Missing data for fx variable 'areacello' of dataset ERA5\n",
+      "WARNING:esmvalcore._recipe:Missing data for fx variable 'areacella' of dataset ERA5\n",
+      "WARNING:esmvalcore._recipe:Missing data for fx variable 'areacello' of dataset ERA5\n",
+      "WARNING:esmvalcore._recipe:Missing data for fx variable 'areacella' of dataset ERA5\n",
+      "WARNING:esmvalcore._recipe:Missing data for fx variable 'areacello' of dataset ERA5\n",
+      "WARNING:esmvalcore._recipe:Missing data for fx variable 'areacella' of dataset ERA5\n",
+      "WARNING:esmvalcore._recipe:Missing data for fx variable 'areacello' of dataset ERA5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eWaterCycle forcing\n",
+      "-------------------\n",
+      "start_time=1990-01-01T00:00:00Z\n",
+      "end_time=1990-12-31T00:00:00Z\n",
+      "directory=/home/sarah/temp/esmvaltool_output/recipe_hype_20220607_123122/work/hype/script/ERA5\n",
+      "shape=/home/sarah/GitHub/ewatercycle/docs/examples/data/Rhine/Rhine.shp\n",
+      "Pobs=Pobs.txt\n",
+      "TMAXobs=TMAXobs.txt\n",
+      "TMINobs=TMINobs.txt\n",
+      "Tobs=Tobs.txt\n"
+     ]
+    }
+   ],
    "source": [
     "hype_forcing = ewatercycle.forcing.generate(\n",
     "    target_model=\"hype\",\n",
@@ -869,6 +900,13 @@
     ")\n",
     "print(hype_forcing)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -887,7 +925,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.2"
   },
   "metadata": {
    "interpreter": {
