Add hype to example list

--- a/docs/examples/hype.ipynb
+++ b/docs/examples/hype.ipynb
@@ -55,7 +55,6 @@
    "outputs": [],
    "source": [
     "parameter_set_dir = \"<path where demo.zip was extracted to>\"\n",
-    "parameter_set_dir = \"/home/stefanv/git/eWaterCycle/ewatercycle/docs/examples/hype-run/demo\"\n",
     "parameter_set = ewatercycle.parameter_sets.ParameterSet(\n",
     "    name=\"hype_demo\",\n",
     "    directory=parameter_set_dir,\n",
@@ -155,7 +154,7 @@
     }
    ],
    "source": [
-    "cfg_file, cfg_dir = model.setup(end_time='1962-06-30T00:00:00Z')\n",
+    "cfg_file, cfg_dir = model.setup(end_time=\"1962-06-30T00:00:00Z\")\n",
     "cfg_file, cfg_dir"
    ]
   },
@@ -229,7 +228,7 @@
     "    # The demo parameter set has a single sub catchment so store first value of array\n",
     "    discharge.append(model.get_value(\"comp outflow olake\")[0])\n",
     "    time_range.append(model.time_as_datetime.date())\n",
-    "    print(model.time_as_isostr, end=\"\\r\")\n"
+    "    print(model.time_as_isostr, end=\"\\r\")"
    ]
   },
   {
