Replace singularity with apptainer in example notebooks

--- a/docs/examples/lisflood.ipynb
+++ b/docs/examples/lisflood.ipynb
@@ -283,7 +283,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running /mnt/data/singularity-images/ewatercycle-lisflood-grpc4bmi_20.10.sif singularity container on port 41619\n",
+      "Running /mnt/data/apptainer-images/ewatercycle-lisflood-grpc4bmi_20.10.sif apptainer container on port 41619\n",
       "/home/vagrant/ewatercycle/docs/examples/ewatercycle_output/lisflood_20210930_093520/lisflood_setting.xml\n",
       "/home/vagrant/ewatercycle/docs/examples/ewatercycle_output/lisflood_20210930_093520\n"
      ]
