--- a/docs/examples/pcrglobwb.ipynb
+++ b/docs/examples/pcrglobwb.ipynb
@@ -279,7 +279,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Calling `setup()` will start up a docker or singularity container. Be careful with calling it multiple times!"
+    "Calling `setup()` will start up a container. Be careful with calling it multiple times!"
    ],
    "metadata": {}
   },
@@ -297,7 +297,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Running /home/peter/ewatercycle/ewatercycle/ewatercycle-pcrg-grpc4bmi-setters.sif singularity container on port 50639\n"
+      "Running /home/peter/ewatercycle/ewatercycle/ewatercycle-pcrg-grpc4bmi-setters.sif apptainer container on port 50639\n"
      ]
     },
     {
@@ -909,7 +909,7 @@
    "source": [
     "## Cleaning up\n",
     "\n",
-    "Models usually perform some \"wrap up tasks\" at the end of a model run, such as writing the last outputs to disk and releasing memory. In the case of eWaterCycle, another important teardown task is destroying the docker or singularity container in which the model was running. This can free up a lot of resources on your system. Therefore it is good practice to always call `finalize()` when you're done with an experiment."
+    "Models usually perform some \"wrap up tasks\" at the end of a model run, such as writing the last outputs to disk and releasing memory. In the case of eWaterCycle, another important teardown task is destroying the container in which the model was running. This can free up a lot of resources on your system. Therefore it is good practice to always call `finalize()` when you're done with an experiment."
    ],
    "metadata": {}
   },
