--- a/docs/user_guide.ipynb
+++ b/docs/user_guide.ipynb
@@ -55,7 +55,7 @@
     {
      "data": {
       "text/plain": [
-       "Config({'container_engine': 'singularity',\n",
+       "Config({'container_engine': 'apptainer',\n",
        "        'ewatercycle_config': PosixPath('/home/fakhereh/.config/ewatercycle/ewatercycle.yaml'),\n",
        "        'grdc_location': PosixPath('/projects/0/wtrcycle/GRDC/GRDC_GCOSGTN-H_27_03_2019'),\n",
        "        'output_dir': PosixPath('/scratch-shared/ewatercycle'),\n",
@@ -145,7 +145,7 @@
        "                                                                               '2020.1.2'},\n",
        "                                                  'target_model': 'wflow'}},\n",
        "        'parameterset_dir': PosixPath('/projects/0/wtrcycle/parameter-sets'),\n",
-       "        'singularity_dir': PosixPath('/projects/0/wtrcycle/singularity-images')})"
+       "        'apptainer_dir': PosixPath('/projects/0/wtrcycle/apptainer-images')})"
       ]
      },
      "execution_count": 2,
@@ -745,7 +745,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running /projects/0/wtrcycle/singularity-images/ewatercycle-wflow-grpc4bmi_2020.1.2.sif singularity container on port 35805\n"
+      "Running /projects/0/wtrcycle/apptainer-images/ewatercycle-wflow-grpc4bmi_2020.1.2.sif apptainer container on port 35805\n"
      ]
     }
    ],
