rename to to_xarray(self)

--- a/docs/plugins/marrmot/generate_forcing.ipynb
+++ b/docs/plugins/marrmot/generate_forcing.ipynb
@@ -97,36 +97,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ewatercycle.plugins.marrmot.forcing import load_forcing_file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/home/verhoes/git/eWaterCycle/ewatercycle/docs/plugins/marrmot/esmvaltool_output/tmpl1l0jqvcrecipe_marrmot_20230801_113603/work/diagnostic_daily/script/marrmot_ERA5_Rhine_1989_1992.mat')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fn = forcing.directory / forcing.forcing_file\n",
-    "fn"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -553,7 +523,7 @@
     }
    ],
    "source": [
-    "ds = load_forcing_file(fn)\n",
+    "ds = forcing.to_xarray()\n",
     "ds"
    ]
   },
