--- a/docs/user_guide.ipynb
+++ b/docs/user_guide.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "bd2d9bd5",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "570e6d66",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
        "            <span style=\"color: #808000; text-decoration-color: #808000\">config</span>=<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">PosixPath</span><span style=\"font-weight: bold\">(</span><span style=\"color: #008000; text-decoration-color: #008000\">'/home/verhoes/git/eWaterCycle/parameter-sets/wflow_rhine_sbm_nc/wflow_sbm_NC.ini'</span><span style=\"font-weight: bold\">)</span>,\n",
        "            <span style=\"color: #808000; text-decoration-color: #808000\">doi</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'N/A'</span>,\n",
        "            <span style=\"color: #808000; text-decoration-color: #808000\">target_model</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'wflow'</span>,\n",
-       "            <span style=\"color: #808000; text-decoration-color: #808000\">supported_model_versions</span>=<span style=\"font-weight: bold\">{</span><span style=\"color: #008000; text-decoration-color: #008000\">'2020.1.1'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'2020.1.2'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'2020.1.3'</span><span style=\"font-weight: bold\">}</span>,\n",
+       "            <span style=\"color: #808000; text-decoration-color: #808000\">supported_model_versions</span>=<span style=\"font-weight: bold\">{</span><span style=\"color: #008000; text-decoration-color: #008000\">'2020.1.2'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'2020.1.3'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'2020.1.1'</span><span style=\"font-weight: bold\">}</span>,\n",
        "            <span style=\"color: #808000; text-decoration-color: #808000\">downloader</span>=<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">GitHubDownloader</span><span style=\"font-weight: bold\">(</span>\n",
        "                <span style=\"color: #808000; text-decoration-color: #808000\">org</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'openstreams'</span>,\n",
        "                <span style=\"color: #808000; text-decoration-color: #808000\">repo</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'wflow'</span>,\n",
@@ -169,7 +169,7 @@
        "            \u001b[33mconfig\u001b[0m=\u001b[1;35mPosixPath\u001b[0m\u001b[1m(\u001b[0m\u001b[32m'/home/verhoes/git/eWaterCycle/parameter-sets/wflow_rhine_sbm_nc/wflow_sbm_NC.ini'\u001b[0m\u001b[1m)\u001b[0m,\n",
        "            \u001b[33mdoi\u001b[0m=\u001b[32m'N/A'\u001b[0m,\n",
        "            \u001b[33mtarget_model\u001b[0m=\u001b[32m'wflow'\u001b[0m,\n",
-       "            \u001b[33msupported_model_versions\u001b[0m=\u001b[1m{\u001b[0m\u001b[32m'2020.1.1'\u001b[0m, \u001b[32m'2020.1.2'\u001b[0m, \u001b[32m'2020.1.3'\u001b[0m\u001b[1m}\u001b[0m,\n",
+       "            \u001b[33msupported_model_versions\u001b[0m=\u001b[1m{\u001b[0m\u001b[32m'2020.1.2'\u001b[0m, \u001b[32m'2020.1.3'\u001b[0m, \u001b[32m'2020.1.1'\u001b[0m\u001b[1m}\u001b[0m,\n",
        "            \u001b[33mdownloader\u001b[0m=\u001b[1;35mGitHubDownloader\u001b[0m\u001b[1m(\u001b[0m\n",
        "                \u001b[33morg\u001b[0m=\u001b[32m'openstreams'\u001b[0m,\n",
        "                \u001b[33mrepo\u001b[0m=\u001b[32m'wflow'\u001b[0m,\n",
@@ -497,20 +497,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "9624c99d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">ForcingSources<span style=\"font-weight: bold\">[</span><span style=\"color: #008000; text-decoration-color: #008000\">'HypeForcing'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'LisfloodForcing'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'MarrmotForcing'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'PCRGlobWBForcing'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'WflowForcing'</span>, \n",
-       "<span style=\"color: #008000; text-decoration-color: #008000\">'GenericDistributedForcing'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'GenericLumpedForcing'</span><span style=\"font-weight: bold\">]</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">ForcingSources<span style=\"font-weight: bold\">[</span><span style=\"color: #008000; text-decoration-color: #008000\">'GenericDistributedForcing'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'GenericLumpedForcing'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'HypeForcing'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'LisfloodForcing'</span>, \n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">'MarrmotForcing'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'PCRGlobWBForcing'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'WflowForcing'</span><span style=\"font-weight: bold\">]</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "ForcingSources\u001b[1m[\u001b[0m\u001b[32m'HypeForcing'\u001b[0m, \u001b[32m'LisfloodForcing'\u001b[0m, \u001b[32m'MarrmotForcing'\u001b[0m, \u001b[32m'PCRGlobWBForcing'\u001b[0m, \u001b[32m'WflowForcing'\u001b[0m, \n",
-       "\u001b[32m'GenericDistributedForcing'\u001b[0m, \u001b[32m'GenericLumpedForcing'\u001b[0m\u001b[1m]\u001b[0m\n"
+       "ForcingSources\u001b[1m[\u001b[0m\u001b[32m'GenericDistributedForcing'\u001b[0m, \u001b[32m'GenericLumpedForcing'\u001b[0m, \u001b[32m'HypeForcing'\u001b[0m, \u001b[32m'LisfloodForcing'\u001b[0m, \n",
+       "\u001b[32m'MarrmotForcing'\u001b[0m, \u001b[32m'PCRGlobWBForcing'\u001b[0m, \u001b[32m'WflowForcing'\u001b[0m\u001b[1m]\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -599,13 +599,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "00fe9118",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "db31b882",
    "metadata": {},
@@ -624,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "d52b0a76",
    "metadata": {},
    "outputs": [
@@ -634,13 +627,13 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">GenericDistributedForcing</span><span style=\"font-weight: bold\">(</span>\n",
        "    <span style=\"color: #808000; text-decoration-color: #808000\">start_time</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'2000-01-01T00:00:00Z'</span>,\n",
        "    <span style=\"color: #808000; text-decoration-color: #808000\">end_time</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'2001-01-01T00:00:00Z'</span>,\n",
-       "    <span style=\"color: #808000; text-decoration-color: #808000\">directory</span>=<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">PosixPath</span><span style=\"font-weight: bold\">(</span><span style=\"color: #008000; text-decoration-color: #008000\">'/home/verhoes/git/eWaterCycle/ewatercycle/docs/esmvaltool_output/ewcrephf1_xkvb_20230830_1</span>\n",
-       "<span style=\"color: #008000; text-decoration-color: #008000\">24850/work/diagnostic/script'</span><span style=\"font-weight: bold\">)</span>,\n",
+       "    <span style=\"color: #808000; text-decoration-color: #808000\">directory</span>=<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">PosixPath</span><span style=\"font-weight: bold\">(</span><span style=\"color: #008000; text-decoration-color: #008000\">'/home/verhoes/git/eWaterCycle/ewatercycle/docs/esmvaltool_output/ewcrepnjk26_5n_20230904_0</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">91856/work/diagnostic/script'</span><span style=\"font-weight: bold\">)</span>,\n",
        "    <span style=\"color: #808000; text-decoration-color: #808000\">shape</span>=<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">PosixPath</span><span style=\"font-weight: bold\">(</span><span style=\"color: #008000; text-decoration-color: #008000\">'/home/verhoes/git/eWaterCycle/ewatercycle/src/ewatercycle/testing/data/Rhine/Rhine.shp'</span><span style=\"font-weight: bold\">)</span>,\n",
-       "    <span style=\"color: #808000; text-decoration-color: #808000\">pr</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'OBS6_ERA5_reanaly_*_day_pr_2000-2001.nc'</span>,\n",
-       "    <span style=\"color: #808000; text-decoration-color: #808000\">tas</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'OBS6_ERA5_reanaly_*_day_tas_2000-2001.nc'</span>,\n",
-       "    <span style=\"color: #808000; text-decoration-color: #808000\">tasmin</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'OBS6_ERA5_reanaly_*_day_tasmin_2000-2001.nc'</span>,\n",
-       "    <span style=\"color: #808000; text-decoration-color: #808000\">tasmax</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'OBS6_ERA5_reanaly_*_day_tasmax_2000-2001.nc'</span>\n",
+       "    <span style=\"color: #808000; text-decoration-color: #808000\">pr</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'OBS6_ERA5_reanaly_1_day_pr_2000-2001.nc'</span>,\n",
+       "    <span style=\"color: #808000; text-decoration-color: #808000\">tas</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'OBS6_ERA5_reanaly_1_day_tas_2000-2001.nc'</span>,\n",
+       "    <span style=\"color: #808000; text-decoration-color: #808000\">tasmin</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'OBS6_ERA5_reanaly_1_day_tasmin_2000-2001.nc'</span>,\n",
+       "    <span style=\"color: #808000; text-decoration-color: #808000\">tasmax</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'OBS6_ERA5_reanaly_1_day_tasmax_2000-2001.nc'</span>\n",
        "<span style=\"font-weight: bold\">)</span>\n",
        "</pre>\n"
       ],
@@ -648,13 +641,13 @@
        "\u001b[1;35mGenericDistributedForcing\u001b[0m\u001b[1m(\u001b[0m\n",
        "    \u001b[33mstart_time\u001b[0m=\u001b[32m'2000-01-01T00:00:00Z'\u001b[0m,\n",
        "    \u001b[33mend_time\u001b[0m=\u001b[32m'2001-01-01T00:00:00Z'\u001b[0m,\n",
-       "    \u001b[33mdirectory\u001b[0m=\u001b[1;35mPosixPath\u001b[0m\u001b[1m(\u001b[0m\u001b[32m'/home/verhoes/git/eWaterCycle/ewatercycle/docs/esmvaltool_output/ewcrephf1_xkvb_20230830_1\u001b[0m\n",
-       "\u001b[32m24850/work/diagnostic/script'\u001b[0m\u001b[1m)\u001b[0m,\n",
+       "    \u001b[33mdirectory\u001b[0m=\u001b[1;35mPosixPath\u001b[0m\u001b[1m(\u001b[0m\u001b[32m'/home/verhoes/git/eWaterCycle/ewatercycle/docs/esmvaltool_output/ewcrepnjk26_5n_20230904_0\u001b[0m\n",
+       "\u001b[32m91856/work/diagnostic/script'\u001b[0m\u001b[1m)\u001b[0m,\n",
        "    \u001b[33mshape\u001b[0m=\u001b[1;35mPosixPath\u001b[0m\u001b[1m(\u001b[0m\u001b[32m'/home/verhoes/git/eWaterCycle/ewatercycle/src/ewatercycle/testing/data/Rhine/Rhine.shp'\u001b[0m\u001b[1m)\u001b[0m,\n",
-       "    \u001b[33mpr\u001b[0m=\u001b[32m'OBS6_ERA5_reanaly_*_day_pr_2000-2001.nc'\u001b[0m,\n",
-       "    \u001b[33mtas\u001b[0m=\u001b[32m'OBS6_ERA5_reanaly_*_day_tas_2000-2001.nc'\u001b[0m,\n",
-       "    \u001b[33mtasmin\u001b[0m=\u001b[32m'OBS6_ERA5_reanaly_*_day_tasmin_2000-2001.nc'\u001b[0m,\n",
-       "    \u001b[33mtasmax\u001b[0m=\u001b[32m'OBS6_ERA5_reanaly_*_day_tasmax_2000-2001.nc'\u001b[0m\n",
+       "    \u001b[33mpr\u001b[0m=\u001b[32m'OBS6_ERA5_reanaly_1_day_pr_2000-2001.nc'\u001b[0m,\n",
+       "    \u001b[33mtas\u001b[0m=\u001b[32m'OBS6_ERA5_reanaly_1_day_tas_2000-2001.nc'\u001b[0m,\n",
+       "    \u001b[33mtasmin\u001b[0m=\u001b[32m'OBS6_ERA5_reanaly_1_day_tasmin_2000-2001.nc'\u001b[0m,\n",
+       "    \u001b[33mtasmax\u001b[0m=\u001b[32m'OBS6_ERA5_reanaly_1_day_tasmax_2000-2001.nc'\u001b[0m\n",
        "\u001b[1m)\u001b[0m\n"
       ]
      },
@@ -680,7 +673,7 @@
    "id": "6805235d",
    "metadata": {},
    "source": [
-    "For some models (e.g. lisflood) additional computations are done, as some steps require data and/or code that is not available to ESMValTool. Apart from some standard parameters (start time, datasets, etc.), the forcing generator sometimes requires additional model-specific options. For our wflow example case, we need to pass the DEM file to the ESMValTool recipe as well. All model-specific options are listed in the [API documentation](https://ewatercycle.readthedocs.io/en/latest/apidocs/ewatercycle.forcing.html#ewatercycle.forcing.generate)."
+    "For some models (e.g. lisflood) additional computations are done, as some steps require data and/or code that is not available to ESMValTool. Apart from some standard parameters (start time, datasets, etc.), the forcing generator sometimes requires additional model-specific options. For our wflow example case, we need to pass the DEM file to the ESMValTool recipe as well. All model-specific options are listed in their [documentation](https://ewatercycle.readthedocs.io/en/latest/plugins.html)."
    ]
   },
   {
@@ -690,9 +683,9 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\">\n",
-    "<p>Current limitations</p>\n",
+    "<p>Current forcing generation dataset sources</p>\n",
     "    \n",
-    "<p>eWaterCycle uses ESMValTool to generate forcing data. Currently we support changing the most basic settings such as start time, end time, and region. We implemented support for ERA5 and ERA-Interim data. There is untested support for forcing datasets from ESGF by supplying a [Dataset object](autoapi/ewatercycle/esmvaltool/models/index.html#ewatercycle.esmvaltool.models.Dataset) to the :py:func:`ewatercycle.base.forcing.Defaultforcing.generate` method. In theory this should download the dataset from ESGF.</p>\n",
+    "<p>eWaterCycle uses ESMValTool to generate forcing data. You can generate forcing from pre-defined `ERA5` and `ERA-Interim` datasets. There is also support for generating forcing from datasets on [ESGF](https://esgf.llnl.gov/) by supplying a [Dataset object](autoapi/ewatercycle/esmvaltool/models/index.html#ewatercycle.esmvaltool.models.Dataset) to the :py:func:`ewatercycle.base.forcing.Defaultforcing.generate` method.</p>\n",
     "</div>"
    ]
   },
