Link to example repos

--- a/docs/user_guide.ipynb
+++ b/docs/user_guide.ipynb
@@ -756,6 +756,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e484e94",
+   "metadata": {},
+   "source": [
+    "To make your own forcing generator, see the [adding models](https://ewatercycle.readthedocs.io/en/latest/adding_models.html#custom-forcing) documentation."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "106d4a56",
